[package]
name = "brb_dt_tree"
version = "1.0.2"
description = "implements a BRBDataType wrapper around a Tree CRDT"
authors = [ "dan-da <dan-da@users.noreply.github.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/brb_dt_tree"
edition = "2018"

[dependencies]
crdt_tree = "0.0.8"
brb = "1.0.2"
serde = "1.0.120"
thiserror = "1.0.23"

[dev-dependencies]
quickcheck = "1.0.3"

[profile.test]
opt-level = 3
lto = "fat"
